lose inline styles on discussions table in favor of class declarations; stop linking empty space in the subject column; move clipping css from inline style on the anchor to a class on a wrapper element
git-svn-id: http://abadthing.com/tmbo/trunk@263 7ced0b6d-2a13-0410-a4a2-c2825b4e6d43

--- a/web/styles/oldskool.css
+++ b/web/styles/oldskool.css
@@ -202,6 +202,21 @@ table.thumbnails td a {
 	width:100%;
 }
 
+/* in the subject column on discussions page */
+#discussions .clipr {
+	float:left;
+	overflow:hidden;
+	white-space:nowrap;
+	width:340px;
+}
+
+/* date and timestamp columns on discussions page */
+#discussions .dater,
+#discussions .com_cnt {
+	text-align:right;
+	white-space:nowrap;
+}
+
 .adminControls {
 	background:#999999;
 	padding:1em;
